# morrowind-ai-framework

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INTEGRATION_README.md  LICENSE  PROJECT_STATUS.md  README.md  SECURITY.md  build_openmw.bat  build_qt.bat  integrate_ai.bat  integrate_ai.ps1  integrate_manual.bat  integrate_manual_v2.bat  integrate_manual_v3.bat  integrate_with_openmw.bat  integrate_with_openmw.sh  integrate_with_openmw_fixed.bat  integration_plan.md  test_ai_integration.lua
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ai_server.yml  openmw_client.yml
ai-server/: .env.example  .gitignore  README.md  config.json.example  example_client.py  requirements.txt  run_server.py  setup.py  start_server.bat  start_server.sh  test_server.py
ai-server/npc-profiles/: example_npc.json  test_npc.json
ai-server/src/: __init__.py  action_parser.py  config.py  context_manager.py  llm_interface.py  prompt_manager.py  server.py  voice_system.py
ai-server/static-data/: factions.json  locations.json  lore.json
ai-server/static-data/templates/: dialogue_template.txt  system_template.txt
openmw-client/: README.md
openmw-client/components/ai_client/: CMakeLists.txt  client.cpp  client.hpp
openmw-client/components/lua/: ai.cpp  ai.hpp
openmw-client/components/openmw-mp/mwbase/: aimanager.hpp  aimanagerimpl.cpp  aimanagerimpl.hpp
openmw-client/resources/lua/: ai_npc_dialogue.lua
